--- a/style.css
+++ b/style.css
@@ -38,3 +38,12 @@ body{
     width: 450px;
     height: 20%
 }
+
+
+#buttons-container{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+
