--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body{
     background-color: #3b3b38;
 }
 
+/* Calculator display */
 .display{
     margin-top: 10px;
     border-style: solid;
@@ -40,10 +41,24 @@ body{
 }
 
 
+/* Button properties */
 #buttons-container{
+    margin-top: 10px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
+    width: 90%;
+    height: 70%;
 }
 
 
+.column{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 25%;
+}
+
+button{
+    width: 25%;
+}
