--- a/style.css
+++ b/style.css
@@ -43,12 +43,12 @@ body{
 
 /* Button properties */
 #buttons-container{
-    margin-top: 10px;
+    margin-top: 30px;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     width: 90%;
     height: 70%;
+    gap: 10px;
 }
 
 
@@ -56,9 +56,59 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 25%;
+    height: 100%;
+    width: 100%;
+    gap: 10px;
 }
 
-button{
-    width: 25%;
+
+/* Button Spacing */
+
+.number, .clear, .operation, .plusMinus{
+    width: 100%;
+    height: 100%;
+    
 }
+
+.division, .backspace{
+    width: 100%;
+    height: 50%;
+}
+
+.equalSign{
+    width: 100%;
+    height: 100%;
+}
+
+
+/* Button style */
+
+button{
+    border-radius: 10px;
+}
+
+.number{
+    color: #a0fb98;
+    background-color: black;
+}
+
+.clear{
+    background-color: #cc0000;
+    color: black;
+}
+
+.operation, .division{
+    background-color: #003b00;
+    color: white;
+}
+
+.plusMinus, .backspace{
+    background-color: #357a38;
+    color: white;
+}
+
+.equalSign{
+    background-color: #a0fb98;
+    color: black;
+}
+
