--- a/style.css
+++ b/style.css
@@ -30,11 +30,19 @@ body{
 
 /* Calculator display */
 .display{
+    display: flex;
+    justify-content: right;
+    align-items: center;
     margin-top: 10px;
     border-style: solid;
     border-color: black;
     background-color: #a0fb98;
     border-radius: 15px;
+
+    font-size: 2.5vw;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 
     width: 450px;
     height: 20%
