--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body{
     background-color: #a0fb98;
     border-radius: 15px;
 
-    font-size: 2.5vw;
+    font-size: 3.5rem;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
